Fix overflow issue

--- a/src/server/client/stylesheets/views/layout.less
+++ b/src/server/client/stylesheets/views/layout.less
@@ -94,7 +94,6 @@ div.mt-main--narrow + div.mt-sidebar {
   color: @blackNormal;
   box-shadow: 1px 1px 1px rgba(255, 255, 255, 0.3);
   margin-bottom: 1.25em;
-  overflow: hidden;
 
   p {
     font-size: 1.25em;
